{
    "name": "StationaryInput",
    "maps": [
        {
            "name": "FPS",
            "id": "ec781481-f084-4aba-880e-9f5745f3d2a9",
            "actions": [
                {
                    "name": "MovementX",
                    "type": "Value",
                    "id": "dd849214-1a36-4e18-be67-dd48c524a51c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(pressPoint=1.401298E-45,behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "MovementY",
                    "type": "Value",
                    "id": "733819d8-ffdd-4cdd-8987-75496f7841fb",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "43cf1caf-3671-4806-88af-795e77aa560f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "RotationX",
                    "type": "Value",
                    "id": "5a3ee4a8-273c-4ec6-9365-bf182e3ab87b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "RotationY",
                    "type": "Value",
                    "id": "2412eaed-3ced-42ee-b47a-6489c7718896",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Utility",
                    "type": "PassThrough",
                    "id": "eddeaa98-a199-4516-929b-13d7ed6942d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "bd9b3406-2793-428b-b050-29c60df61eb6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Lean",
                    "type": "Value",
                    "id": "36b1d91a-ed42-45b9-962d-73f59779f8c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b8e18f94-9a4c-4e4b-b05a-418f7dfb76fc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "AD",
                    "id": "46650f52-09c1-44fa-9179-eb6f654f65b2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "90ce448e-967a-48ff-9f54-5d2aab5da204",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "387d1fa8-f1af-4aea-bf9e-783321fbade7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementX",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "WS",
                    "id": "4f7bf01c-1628-4d16-8886-80473a117f7d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c0cfb2e6-d36e-4470-8a43-214ac4838624",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "59e0f6a7-f4e7-4ba9-96e5-e9c436eac5d9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MovementY",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "af5e9dd8-799f-419c-8720-01f85d5716c2",
                    "path": "<Mouse>/Delta/X",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85ce53cc-f7a3-4e1a-8947-b3b24e20d811",
                    "path": "<Mouse>/Delta/Y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotationY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71283398-1fc5-439d-b032-4e01e758ef57",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Utility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed7e5b89-517c-4be0-9fd3-6eca66041d3a",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "QE",
                    "id": "634e9c71-e5cf-45e8-998a-ff21fc8112cc",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b9b1e0f7-7194-41c3-8133-8c265268af9f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "37885d99-4697-47d3-a6d0-ad854c5f58df",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lean",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}